    the MathML reader now checks that a <math> element or the body
    of a <lambda> element use appropriate tags as detailed
    in the schema for the subset of MathML supported.
    
  - The MATLAB binding now correctly identifies the use of the csymbol
    delay and provides the information to the user in a similar fashion
    to csymbol time.

* Bug fixes:

  - Tracker issue #2136530
    When adding a child to an XMLNode marked as an 'end' node the XMLNode
    remained marked as an 'end' node.  This caused incorrect xml to be
    written out.  Thanks to Ralph Gauges for reporting this.

  - A missing 'level' or 'version' attribute was not being correctly
    reported.

  - Tracker issue #2082584.
    Fixed memory leak reported by Jonathan Cooper.
    
  - Tracker issue #2086644.
    Validation was crashing when checking the math/units of an
    expression using a functionDefinition that had not been properly
    defined.  The code that caused the crash has been fixed.

  - Fixed a memory leak in the assignment operator of ListOf class.
    Thanks to Sven Sahle for reporting this problem.

* Changes:

  - Tracker issue #2118126
    The getDerivedUnitDefinition() function always returned NULL for a
    local parameter.  Andreas Draeger requested that it return a 
    unitDefinition derived from the units attribute.  This has now
    been implemented.

  - Tracker issue #2082682.
    The unit checking code was not dealing correctly with expressions
    containing 'root' except in cases where exact integers were involved.
    The code now reports situations where it is unable to check the 
    unit consistency due to non integral exponents.  Thanks to Jonathan
    Cooper for reporting this. 

 === Version 3.2.0 (released 2008-08-20) ===

* New features:

  - Tracker issue #1912123.
    There is a new API that allows the user to directly manipulate 
    XML objects.  The function style mimics the existing libSBML